multiple blog posts spacing fix

--- a/themes/dli/assets/css/main.css
+++ b/themes/dli/assets/css/main.css
@@ -20,7 +20,6 @@ section {
   width: 100%;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   padding: 0 20px;
   box-sizing: border-box;
 }
